--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "download": "^8.0.0",
     "express": "^4.17.1",
     "puppeteer": "^3.0.2",
     "request": "^2.88.2",
